contenedores/contenedores.css
/*Esta hoja de estilos incluye las propiedades de los contenedores comunes*/

body {
    display: flex;
    align-items: center;
    justify-content: center;
    height: 100vh;
    width: 100%;
    background: #111;
    font-family: Arial, sans-serif;
    margin: 0;
}

/*Crea una calculadora, al añadir una nueva se ordenaran todos los botones solos*/
.calculadora {
    position: relative;
    border-radius: 10px;
    top: 20px;
    padding: 30px;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    margin: 20px;
    justify-content: center;
    flex-shrink: 0;
    width: 300px;
}
/*Pantalla de todas las calculadoras, se pone justo despues del titulo y antes de los botones, el largo
se ajustara automaticamente, si quieres ajustar la altura se debe hacer con los id */
.pantalla {
    box-sizing: border-box;
    position: relative;
    width: 100%;
    height: 100px;
    align-content: center;
    font-size: 45px;
    text-align: center;
    font-weight: bolder;
    overflow-x: auto;
    overflow-y: auto;
    border: 3px solid black;
}
/*Titulo de las calculadoras*/
h2{
    font-size: 50px;
    text-align: center;
    margin: 0;
}
input {
    margin: 20px;
    height: 30px;
}
/*Boton de mostrar informacion fijo en cada calculadora, en la esquina superior derecha*/
#inf {
    position: fixed;
    top: 5px;
    right: 5px;
    border-radius: 10px;
    font-weight: bolder;
    text-align: center;
    align-content: center;
}
/*Contenedor que contiene la informacion de las calculadoras*/
#contInf {
    position: absolute;
    right: 20px;
    top: 5px;
    bottom: 75%;
    width: 25%;
    z-index: 10;
    padding: 20px;
    font-weight: bolder;
    display:none;
    overflow-y: auto;
    white-space: pre-line;
}
/*Boton de ocultar informacion dentro del contenedor de informacion*/
#ocultarInfo {
    position: absolute;
    bottom: 10px;
    left: 10px;
    width: 50px;
    height: 50px;
    border-radius: 5px;
}
#calculadorasBoton {
    position: fixed;
    left: 5px;
    top: 35%;
    width: 20%;
    height: 10%;
    z-index: 5;
}
#calculadoras {
    position: absolute;
    display: none;
    width: 40%;
    left: 5px;
    top: 20px;
    bottom: 20px;
    z-index: 14;
}
.calculadoraMenu {
    position: relative;
    width: 95%;
    margin: 10px;
    height: 50px;
    text-align: center;
    justify-content: center;
    align-content: center;
    font-size: 25px;
    font-weight: bolder;
}

